--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,3 +1,3 @@
 <h1>Page <%= @id %></h1>
 
-<p>Here's a link: <%= link_to "next", "/pages/#@next_id" %></p>
+<p>Here's a link: <%= link_to "next", page_path(@next_id, @url_opts), @link_opts %></p>
